--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,11 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #777;
 }
-
-html, body{
-    margin: 0;
+html,body{
     height: 100%;
+    margin: 0;
 }
+
 
 h1,h2,h3,h4,h5,h6{
     margin: 0;
@@ -64,10 +64,11 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .navbar-scroll{
-    background-color: #fff;
+    background-color: #f3f3f3;
     box-shadow: 2px 2px 5px #333;
     width: 100vw;
     color: #333;
+    animation: fade ease 0.5s;
 }
 .nav-link{
     text-decoration: none;
@@ -80,6 +81,14 @@ h1,h2,h3,h4,h5,h6{
     text-decoration: none;
     letter-spacing: 0.1rem;
     padding: 1rem;
+}
+@keyframes fade{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .navbar>a:hover{
     background: #333;
@@ -119,7 +128,6 @@ h1,h2,h3,h4,h5,h6{
 .card-container{
     width: 90%;
     margin: auto;
-    padding: 2rem;
     font-size: 1.2rem;
 }
 
@@ -148,4 +156,47 @@ h1,h2,h3,h4,h5,h6{
 
 .info-title{
     font-weight: bold;
+}
+
+.footer{
+    background-color: #333;
+    color: #f3f3f3;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    padding:2rem 0;
+    font-size: 1.2rem;
+}
+
+@media screen and (max-width: 600px){
+    .facts{
+        display: block;
+        flex-wrap: nowrap;
+    }
+
+    .facts>article img{
+        width: 100%;
+    }
+    .facts>aside{
+        width: 100%;
+    }
+
+    .card{
+        display: block;
+        width: auto;
+        padding:0 5rem;
+    }
+
+    .cards{
+        display: block;
+        flex-wrap: nowrap;
+    }
+
+    .card>.card-img{
+        padding:0;
+    }
+
+    .bgimg1, .bgimg2{
+        background-attachment: scroll;
+    }
 }
